slightly simpliy some set declarations